--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,15 @@
 --- #YAML:1.0
 name:                Perl-Critic-Bangs
-version:             0.22
+version:             1.00
 abstract:            Perl::Critic::Bangs - A collection of policies for Perl::Critic
-license:             unknown
-generated_by:        ExtUtils::MakeMaker version 6.30_01
-author:              Andy Lester <andy@petdance.com>
+license:             perl
+generated_by:        ExtUtils::MakeMaker version 6.36
 distribution_type:   module
 requires:     
-    Perl::Critic:                  0
+    Perl::Critic:                  1.084
     Test::More:                    0
 meta-spec:
-    url: <http://module-build.sourceforge.net/META-spec-new.html>;
-    version: 1.1
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
+author:
+    - Andy Lester <andy@petdance.com>
