Import of PETDANCE/Perl-Critic-Bangs-1.08 from CPAN.
gitpan-cpan-distribution: Perl-Critic-Bangs
gitpan-cpan-version:      1.08
gitpan-cpan-path:         PETDANCE/Perl-Critic-Bangs-1.08.tar.gz
gitpan-cpan-author:       PETDANCE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Perl-Critic-Bangs
-version:            1.07_02
+version:            1.08
 abstract:           Perl::Critic::Bangs - A collection of policies for Perl::Critic
 author:
     - Andy Lester <andy@petdance.com>
