--- a/META.yml
+++ b/META.yml
@@ -1,37 +1,37 @@
----
-abstract: 'Perl::Critic::Bangs - A collection of policies for Perl::Critic'
+--- #YAML:1.0
+name:               Perl-Critic-Bangs
+version:            1.11_02
+abstract:           Perl::Critic::Bangs - A collection of policies for Perl::Critic
 author:
-  - 'Andy Lester <andy@petdance.com>'
-build_requires:
-  ExtUtils::MakeMaker: 0
+    - Andy Lester <andy@petdance.com>
+license:            artistic_2
+distribution_type:  module
 configure_requires:
-  ExtUtils::MakeMaker: 0
-dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120351'
-license: artistic_2
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
-name: Perl-Critic-Bangs
-no_index:
-  directory:
-    - t
-    - inc
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-  PPI::Cache: 0
-  PPI::Document: 0
-  Perl::Critic: 1.098
-  Perl::Critic::Policy: 0
-  Perl::Critic::PolicyFactory: 0
-  Perl::Critic::PolicyParameter: 0
-  Perl::Critic::TestUtils: 0
-  Perl::Critic::UserProfile: 0
-  Perl::Critic::Utils: 0
-  Perl::Critic::Violation: 0
-  Readonly: 0
-  Test::More: 0.96
-  Test::Perl::Critic: 1.01
+    Perl::Critic:         1.098
+    Perl::Critic::Policy:  0
+    Perl::Critic::PolicyFactory:  0
+    Perl::Critic::PolicyParameter:  0
+    Perl::Critic::TestUtils:  0
+    Perl::Critic::UserProfile:  0
+    Perl::Critic::Utils:  0
+    Perl::Critic::Violation:  0
+    PPI::Cache:           0
+    PPI::Document:        0
+    Readonly:             0
+    Test::More:           0.96
+    Test::Perl::Critic:   1.01
 resources:
-  license: http://dev.perl.org/licenses/
-  repository: git://github.com/petdance/perl-critic-bangs.git
-version: 1.11_01
+    license:     http://dev.perl.org/licenses/
+    repository:  git://github.com/petdance/perl-critic-bangs.git
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
